// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment component renders a comment passed in as props 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr>
    <td
        colSpan="2"
    />
    <td>
        <form
            action="comment"
            method="post"
        >
            <input
                name="parent"
                type="hidden"
                value="15237896"
            />
            <input
                name="goto"
                type="hidden"
                value="item?id=15237896"
            />
            <input
                name="hmac"
                type="hidden"
                value="02641d0660c89c1a83ccf0d171e42497d10d2135"
            />
            <textarea
                cols="60"
                name="text"
                rows="6"
            />
            <br />
            <br />
            <input
                type="submit"
                value="add comment"
            />
        </form>
    </td>
</tr>,
  "nodes": Array [
    <tr>
      <td
            colSpan="2"
      />
      <td>
            <form
                  action="comment"
                  method="post"
            >
                  <input
                        name="parent"
                        type="hidden"
                        value="15237896"
                  />
                  <input
                        name="goto"
                        type="hidden"
                        value="item?id=15237896"
                  />
                  <input
                        name="hmac"
                        type="hidden"
                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                  />
                  <textarea
                        cols="60"
                        name="text"
                        rows="6"
                  />
                  <br />
                  <br />
                  <input
                        type="submit"
                        value="add comment"
                  />
            </form>
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CommentBox />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr>
          <td
                    colSpan="2"
          />
          <td>
                    <form
                              action="comment"
                              method="post"
                    >
                              <input
                                        name="parent"
                                        type="hidden"
                                        value="15237896"
                              />
                              <input
                                        name="goto"
                                        type="hidden"
                                        value="item?id=15237896"
                              />
                              <input
                                        name="hmac"
                                        type="hidden"
                                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                              />
                              <textarea
                                        cols="60"
                                        name="text"
                                        rows="6"
                              />
                              <br />
                              <br />
                              <input
                                        type="submit"
                                        value="add comment"
                              />
                    </form>
          </td>
</tr>,
        "_debugID": 4,
        "_renderedOutput": <tr>
          <td
                    colSpan="2"
          />
          <td>
                    <form
                              action="comment"
                              method="post"
                    >
                              <input
                                        name="parent"
                                        type="hidden"
                                        value="15237896"
                              />
                              <input
                                        name="goto"
                                        type="hidden"
                                        value="item?id=15237896"
                              />
                              <input
                                        name="hmac"
                                        type="hidden"
                                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                              />
                              <textarea
                                        cols="60"
                                        name="text"
                                        rows="6"
                              />
                              <br />
                              <br />
                              <input
                                        type="submit"
                                        value="add comment"
                              />
                    </form>
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CommentBox />,
}
`;

exports[`Comment component renders at different indentation levels 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr>
    <td
        colSpan="2"
    />
    <td>
        <form
            action="comment"
            method="post"
        >
            <input
                name="parent"
                type="hidden"
                value="15237896"
            />
            <input
                name="goto"
                type="hidden"
                value="item?id=15237896"
            />
            <input
                name="hmac"
                type="hidden"
                value="02641d0660c89c1a83ccf0d171e42497d10d2135"
            />
            <textarea
                cols="60"
                name="text"
                rows="6"
            />
            <br />
            <br />
            <input
                type="submit"
                value="add comment"
            />
        </form>
    </td>
</tr>,
  "nodes": Array [
    <tr>
      <td
            colSpan="2"
      />
      <td>
            <form
                  action="comment"
                  method="post"
            >
                  <input
                        name="parent"
                        type="hidden"
                        value="15237896"
                  />
                  <input
                        name="goto"
                        type="hidden"
                        value="item?id=15237896"
                  />
                  <input
                        name="hmac"
                        type="hidden"
                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                  />
                  <textarea
                        cols="60"
                        name="text"
                        rows="6"
                  />
                  <br />
                  <br />
                  <input
                        type="submit"
                        value="add comment"
                  />
            </form>
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CommentBox />,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr>
          <td
                    colSpan="2"
          />
          <td>
                    <form
                              action="comment"
                              method="post"
                    >
                              <input
                                        name="parent"
                                        type="hidden"
                                        value="15237896"
                              />
                              <input
                                        name="goto"
                                        type="hidden"
                                        value="item?id=15237896"
                              />
                              <input
                                        name="hmac"
                                        type="hidden"
                                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                              />
                              <textarea
                                        cols="60"
                                        name="text"
                                        rows="6"
                              />
                              <br />
                              <br />
                              <input
                                        type="submit"
                                        value="add comment"
                              />
                    </form>
          </td>
</tr>,
        "_debugID": 6,
        "_renderedOutput": <tr>
          <td
                    colSpan="2"
          />
          <td>
                    <form
                              action="comment"
                              method="post"
                    >
                              <input
                                        name="parent"
                                        type="hidden"
                                        value="15237896"
                              />
                              <input
                                        name="goto"
                                        type="hidden"
                                        value="item?id=15237896"
                              />
                              <input
                                        name="hmac"
                                        type="hidden"
                                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                              />
                              <textarea
                                        cols="60"
                                        name="text"
                                        rows="6"
                              />
                              <br />
                              <br />
                              <input
                                        type="submit"
                                        value="add comment"
                              />
                    </form>
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CommentBox />,
}
`;

exports[`Comment component shallow renders 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr>
    <td
        colSpan="2"
    />
    <td>
        <form
            action="comment"
            method="post"
        >
            <input
                name="parent"
                type="hidden"
                value="15237896"
            />
            <input
                name="goto"
                type="hidden"
                value="item?id=15237896"
            />
            <input
                name="hmac"
                type="hidden"
                value="02641d0660c89c1a83ccf0d171e42497d10d2135"
            />
            <textarea
                cols="60"
                name="text"
                rows="6"
            />
            <br />
            <br />
            <input
                type="submit"
                value="add comment"
            />
        </form>
    </td>
</tr>,
  "nodes": Array [
    <tr>
      <td
            colSpan="2"
      />
      <td>
            <form
                  action="comment"
                  method="post"
            >
                  <input
                        name="parent"
                        type="hidden"
                        value="15237896"
                  />
                  <input
                        name="goto"
                        type="hidden"
                        value="item?id=15237896"
                  />
                  <input
                        name="hmac"
                        type="hidden"
                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                  />
                  <textarea
                        cols="60"
                        name="text"
                        rows="6"
                  />
                  <br />
                  <br />
                  <input
                        type="submit"
                        value="add comment"
                  />
            </form>
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CommentBox />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr>
          <td
                    colSpan="2"
          />
          <td>
                    <form
                              action="comment"
                              method="post"
                    >
                              <input
                                        name="parent"
                                        type="hidden"
                                        value="15237896"
                              />
                              <input
                                        name="goto"
                                        type="hidden"
                                        value="item?id=15237896"
                              />
                              <input
                                        name="hmac"
                                        type="hidden"
                                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                              />
                              <textarea
                                        cols="60"
                                        name="text"
                                        rows="6"
                              />
                              <br />
                              <br />
                              <input
                                        type="submit"
                                        value="add comment"
                              />
                    </form>
          </td>
</tr>,
        "_debugID": 2,
        "_renderedOutput": <tr>
          <td
                    colSpan="2"
          />
          <td>
                    <form
                              action="comment"
                              method="post"
                    >
                              <input
                                        name="parent"
                                        type="hidden"
                                        value="15237896"
                              />
                              <input
                                        name="goto"
                                        type="hidden"
                                        value="item?id=15237896"
                              />
                              <input
                                        name="hmac"
                                        type="hidden"
                                        value="02641d0660c89c1a83ccf0d171e42497d10d2135"
                              />
                              <textarea
                                        cols="60"
                                        name="text"
                                        rows="6"
                              />
                              <br />
                              <br />
                              <input
                                        type="submit"
                                        value="add comment"
                              />
                    </form>
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CommentBox />,
}
`;
